src/test/ui/error-codes/E0404.stderr
error[E0404]: expected trait, found struct `Foo`
  --> $DIR/E0404.rs:14:6
   |
LL | impl Foo for Bar {} //~ ERROR E0404
   |      ^^^ not a trait

error: cannot continue compilation due to previous error

If you want more information on this error, try using "rustc --explain E0404"
